--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,20 @@
     <title>NewsPaper App</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <a class="navbar-brand" href="{% url 'home' %}">Newspaper</a>
+    {% if user.is_authenticated %}
+        <div class="navbar-nav mr-auto">
+        <li class="nav-item"><a href="{% url 'article_new' %}">+ New</a></li>
+        </div>
+    {% endif %}
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
 <main>
     {% block content %}
     {% endblock %}
