--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -14,6 +14,12 @@
                 {{ article.body }}
             </div>
             <div class="card-footer text-center text-muted">
+                {% for comment in article.comments.all %}
+                    <p>
+                    <span class="font-weight-bold">{{ comment.author }}</span>
+                    {{ comment }}
+                    </p>
+                {% endfor %}
                 <a href="{% url 'article_edit' article.pk %}">Edit</a>
                 |<a href="{% url 'article_delete' article.pk %}">Delete</a>
             </div>
