--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,40 @@
 <!DOCTYPE html>
-<html>
+{% load bootstrap5 %}
+{% bootstrap_css %}
+<html lang = 'en'>
 <head>
     <meta charset= "utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>NewsPaper App</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-    <a class="navbar-brand" href="{% url 'home' %}">Newspaper</a>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <nav class="navbar navbar-dark bg-dark mb-4">
+    <a class="navbar-brand p-2" href="{% url 'home' %}">Newspaper</a>
     {% if user.is_authenticated %}
-        <div class="navbar-nav mr-auto">
-        <li class="nav-item"><a href="{% url 'article_new' %}">+ New</a></li>
+        <div class="dropdown p-2">
+        <button class="dropdown-toggle navbar-toggler"
+                type="button"
+                id="userMenu"
+                data-bs-toggle="dropdown"
+                aria-expanded="false">
+            {{ user.username }}</button>
+            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="userMenu">
+                <li><a class="dropdown-item" href = "{% url 'password_change' %}">Change password</a></li>
+                <li><a class="dropdown-item" href = "{% url 'logout' %}">Log out</a></li>
+            </ul>
         </div>
+    {% else %}
+   <form class="position-absolute end-0 p-3">
+        <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
+        <a href="{% url 'signup' %}" class="btn btn-primary">Sign up</a>
+    </form>
     {% endif %}
-    <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#navbarCollapse"
-            aria-controls="navbarCollapse"
-            aria-expanded="false"
-            aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-    </button>
-<main>
+    </nav>
+<div class="text-">
     {% block content %}
     {% endblock %}
-</main>
+</div>
 </body>
 </html>
