--- a/templates/base.html
+++ b/templates/base.html
@@ -12,27 +12,44 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-dark bg-dark mb-4">
-    <a class="navbar-brand p-2 scale-item" href="{% url 'home' %}">Newspaper</a>
-    {% if user.is_authenticated %}
-        <div class="dropdown p-2 scale-item">
-        <button class="dropdown-toggle navbar-toggler"
-                type="button"
-                id="userMenu"
-                data-bs-toggle="dropdown"
-                aria-expanded="false">
-            {{ user.username }}</button>
-            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="userMenu">
-                <li><a class="but dropdown-item" href = "{% url 'password_change' %}">Change password</a></li>
-                <li><a class="dropdown-item" href = "{% url 'logout' %}">Log out</a></li>
-            </ul>
-        </div>
-    {% else %}
-   <form class="position-absolute end-0 p-3">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark mb-4">
+    <div class = "container-fluid">
+        <a class="navbar-brand scale-item" href="{% url 'home' %}">Home</a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                   <a class="scale-item nav-link" href="{% url 'article_list' %}">Articles</a>
+                </li>
+                  <li class="nav-item">
+                   <a class="scale-item nav-link" href="#">About me</a>
+                </li>
+              </ul>
+         </div>
+        {% if user.is_authenticated %}
+            <div class="nav-item dropdown">
+            <a class="text-light nav-link dropdown-toggle scale-item"
+                    role="button"
+                    id="userMenu"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                    href = "#">
+                {{ user.username }}</a>
+                <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="userMenu">
+                    <li><a class="dropdown-item" href = "{% url 'password_change' %}">Change password</a></li>
+                    <li><a class="dropdown-item" href = "{% url 'logout' %}">Log out</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href = "{% url 'login' %}">Change account</a></li>
+                </ul>
+            </div>
+        {% else %}
         <a href="{% url 'login' %}" class="btn btn-outline-secondary scale-item">Log in</a>
         <a href="{% url 'signup' %}" class="btn btn-primary scale-item">Sign up</a>
-    </form>
     {% endif %}
+    </div>
+    </div>
     </nav>
 <div class="text">
     {% block content %}
