--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -4,24 +4,15 @@
 
 {% block content %}
     {% for article in object_list %}
-        <div class="card">
-            <div class = "card-header">
-                <span class = "font-weight-bold"> {{ article.title }}</span>
-                <span class = 'text-muted'> {{ article.author }} | {{ article.date }}</span>
-            </div>
-
-            <div class = 'card-body'>
-                {{ article.body }}
-            </div>
-            <div class="card-footer text-center text-muted">
-                {% for comment in article.comments.all %}
-                    <p>
-                    <span class="font-weight-bold">{{ comment.author }}</span>
-                    {{ comment }}
-                    </p>
-                {% endfor %}
-                <a href="{% url 'article_edit' article.pk %}">Edit</a>
-                |<a href="{% url 'article_delete' article.pk %}">Delete</a>
+        <div class = "container">
+            <div class="card">
+                <div class = "card-header">
+                    <span class = "font-weight-bold"> {{ article.title }}</span>
+                    <span class = 'text-muted'> {{ article.author }} | {{ article.date }}</span>
+                </div>
+                <div class = 'card-body'>
+                    <a class = "text-body truncate" href="{% url 'article_detail' article.pk %}"> {{ article.body }} </a>
+                </div>
             </div>
         </div>
         <br />
