--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,33 @@
         </button>
          <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav">
-                <li class="nav-item">
-                   <a class="scale-item nav-link" href="{% url 'article_list' %}">Articles</a>
+                <li class="nav-item dropdown">
+                   <a class="scale-item nav-link"
+                      role="button"
+                      id="Articles"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                      href="#">
+                      Articles</a>
+                      <ul class = "dropdown-menu dropdown-menu-dark" aria-labelledby="Articles">
+                          <li><a class = 'dropdown-item' href="{% url 'article_list' %}">Articles</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class = 'dropdown-item' href="{% url 'article_new' %}">New</a></li>
+                      </ul>
                 </li>
-                  <li class="nav-item">
-                   <a class="scale-item nav-link" href="#">About me</a>
+                  <li class="nav-item dropdown">
+                   <a class="scale-item nav-link"
+                      role="button"
+                      id="aboutMe"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="false"
+                      href="#">
+                      About me</a>
+                       <ul class = "dropdown-menu dropdown-menu-dark" aria-labelledby="aboutMe">
+                           <li><a class = 'dropdown-item' href="https://vk.com/goooooose1216">Vk</a></li>
+                           <li><a class = 'dropdown-item' href="#">Inst</a></li>
+                           <li><a class = 'dropdown-item' href="https://github.com/Goose1216">Github</a></li>
+                       </ul>
                 </li>
               </ul>
          </div>
