--- a/templates/article_list.html
+++ b/templates/article_list.html
@@ -7,11 +7,11 @@
         <div class = "container">
             <div class="card">
                 <div class = "card-header">
-                    <span class = "font-weight-bold"> {{ article.title }}</span>
+                    <a class = "text-link font-weight-bold" href="{% url 'article_detail' article.pk %}"> {{ article.title }}</a>
                     <span class = 'text-muted'> {{ article.author }} | {{ article.date }}</span>
                 </div>
                 <div class = 'card-body'>
-                    <a class = "text-body truncate" href="{% url 'article_detail' article.pk %}"> {{ article.body }} </a>
+                    <span class = "truncate"> {{ article.body }} </span>
                 </div>
             </div>
         </div>
