--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -11,5 +11,17 @@
         <a class = "btn btn-dark" href = "{% url 'article_delete' article.pk %}">Delete</a></p>
         {% endif %}
         <p> Back to <a class = "text-link" href = "{% url 'article_list' %}">All articles</a></p>
+    <h3> Commentaries </h3>
+</div>
+<div class = 'container'>
+    {% for comment in object.comments.all %}
+    <p> {{ comment.author.username }} - {{ comment }}</p>
+    {% endfor %}
+    {% if user.is_authenticated %}
+    <a class = 'btn btn-dark' href = "{% url 'comment_new' article.pk %}">Add a new comment</a>
+    {% else %}
+    <p> <a class = "btn btn-dark" href = "{% url 'login' %}">Log in</a> if you want to add a comment </p>
+    {% endif %}
+    <p></p>
 </div>
 {% endblock %}
