--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 
 {% block title %}Login{% endblock %}
@@ -8,7 +9,8 @@
 <h2>Login</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
+    {{ form|crispy }}
+    <p><span class = 'text-muted'>Forgot your password? <a href="{% url 'password_reset' %}"> Reset him</a></span></p>
+    <button class = 'btn btn-success' type="submit">Login</button>
 </form>
 {% endblock %}
