--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 
 {% block title %}Password Change{% endblock %}
@@ -11,7 +12,7 @@
 
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Change my password">
+        {{ form|crispy }}
+        <input class = 'btn btn-success' type="submit" value="Change my password">
     </form>
 {% endblock %}
