--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 
 {% block title %}Enter new password{% endblock %}
@@ -8,7 +9,7 @@
     <h1>Set a new password!</h1>
     <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input class="btn btn-success" type="submit" value="Change my password">
     </form>
 {% endblock %}
