--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_tags %}
 
 
 {% block title %}Forgot Your Password?{% endblock %}
@@ -10,7 +11,7 @@
     w one.</p>
     <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form|crispy }}
     <input class="btn btn-success" type="submit" value="Send me instructions!">
     </form>
 {% endblock %}
