--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,6 +11,7 @@
     {% csrf_token %}
     {{ form|crispy }}
     <p><span class = 'text-muted'>Forgot your password? <a href="{% url 'password_reset' %}"> Reset him</a></span></p>
+    <p><span class = 'text-muted'>Or just log in with <a href="{% url 'github_login' %}">GitHub</a></span></p>
     <button class = 'btn btn-success' type="submit">Login</button>
 </form>
 {% endblock %}
