--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -15,6 +15,9 @@
     <h3> Commentaries </h3>
 </div>
 <div class = 'container'>
+    {% if object.comments.all.count == 0 %}
+    <p class = 'text-muted'> Oop! No one comment :( </p>
+    {% endif %}
     {% for comment in object.comments.all %}
     <p> {{ comment.author.username }} <span class = 'text-muted'>{{ comment.date }}</span> - {{ comment }}</p>
     {% endfor %}
