--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -22,14 +22,14 @@
     <p> {{ comment.author.username }} <span class = 'text-muted'>{{ comment.date }}</span> - {{ comment }}</p>
     {% endfor %}
     {% if user.is_authenticated %}
-    <form action="" method="post" id="comment" class="comment_form">{% csrf_token %}
+    <form action="" method="post" id="comment" name="comment_form">{% csrf_token %}
         <textarea class = 'd-flex my-2'
                   rows="5"
                   cols="60"
                   name="comment"
                   placeholder="Add a new comment"
                   aria-label="comment"
-                  maxlength="256">
+                  maxlength="500">
         </textarea>
         <button class = 'btn btn-dark scale-item' type ='submit'>Add a new comment</button>
     </form>
