--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -18,4 +18,21 @@
         </div>
         <br />
     {% endfor %}
+    <div class="container pagination card text-black text-center border-secondary">
+        <span class="card-body">
+            {% if page_obj.has_previous %}
+                <a href="?page=1" class = 'text-link'>&laquo; first</a>
+                <a href="?page={{ page_obj.previous_page_number }}" class="text-link">previous</a>
+            {% endif %}
+
+            <span class="current">
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}" class="text-link">next</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}"class="text-link">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 {% endblock %}
