--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -4,6 +4,32 @@
 {% block title %}Articles{% endblock %}
 
 {% block content %}
+   <!-- Доработать чтоб запрос сохранялся в аттрибуте Select -->
+    <div class="sort-controls text-center mb-3">
+        <form class = '' action = "#" method="get">
+            <label for="sort">Sort by:</label>
+            <select name="sort" id="sort">
+                {% if sort == 'date' %}
+                    <option value="date" selected>Date</option>
+                {% else %}
+                    <option value="date">Date</option>
+                {% endif %}
+
+                {% if sort == 'title' %}
+                    <option value="title" selected>Title</option>
+                {% else %}
+                    <option value="title">Title</option>
+                {% endif %}
+
+                {% if sort == 'author' %}
+                    <option value="author" selected>Author</option>
+                {% else %}
+                    <option value="author">Author</option>
+                {% endif %}
+            </select>
+            <button type="submit" class="btn-success">Sort</button>
+        </form>
+    </div>
     {% for article in object_list %}
         <div class = "container">
             <div class="card">
@@ -21,8 +47,8 @@
     <div class="container pagination card text-black text-center border-secondary">
         <span class="card-body">
             {% if page_obj.has_previous %}
-                <a href="?page=1" class = 'text-link'>&laquo; first</a>
-                <a href="?page={{ page_obj.previous_page_number }}" class="text-link">previous</a>
+                <a href="?sort={{ sort }}&page=1" class = 'text-link'>&laquo; first</a>
+                <a href="?sort={{ sort }}&page={{ page_obj.previous_page_number }}" class="text-link">previous</a>
             {% endif %}
 
             <span class="current">
@@ -30,8 +56,8 @@
             </span>
 
             {% if page_obj.has_next %}
-                <a href="?page={{ page_obj.next_page_number }}" class="text-link">next</a>
-                <a href="?page={{ page_obj.paginator.num_pages }}"class="text-link">last &raquo;</a>
+                <a href="?sort={{ sort }}&page={{ page_obj.next_page_number }}" class="text-link">next</a>
+                <a href="?sort={{ sort }}&page={{ page_obj.paginator.num_pages }}" class="text-link">last &raquo;</a>
             {% endif %}
         </span>
     </div>
