--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
     <p class = "fs-2">It`s online newspaper, where you can:</p>
     <div class = "fs-3 fst-italic text-start tab">
         <li>Create account</li>
+        <li>Create, update and delete own articles</li>
         <li>Write comments under other people's arcticles</li>
         <li>Change your password</li>
         <li>Reset your password if you forgot with using E-mail</li>
@@ -18,3 +19,4 @@
     <a href="{% url 'signup' %}" class="btn btn-primary btn-lg scale-item">Sign up</a>
 </div>
 {% endblock %}
+ЛЕГИЪ ДЛЯ ПНОНИМАЧ И РЕШЕНИЯПРИНЦИП ИЕРАХРИРЧЕСКО УПОРЯДОВЧИВНАИЯ
