Fix sort for author

--- a/templates/articles/article_list.html
+++ b/templates/articles/article_list.html
@@ -4,6 +4,7 @@
 {% block title %}Articles{% endblock %}
 
 {% block content %}
+    <h1 class = 'text-center mb-3'>All articles</h1>
     <div class="sort-controls text-center mb-3">
         <form class = '' action = "#" method="get">
             <label for="sort">Sort by:</label>
