--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,7 +10,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <p><span class = 'text-muted'>Forgot your password? <a href="{% url 'password_reset' %}"> Reset him</a></span></p>
+    <p><span class = 'text-muted'>Forgot your password? <a href="{% url 'account_reset_password' %}"> Reset him</a></span></p>
     <p><span class = 'text-muted'>Or just log in with <a href="{% url 'github_login' %}">GitHub</a></span></p>
     <button class = 'btn btn-success' type="submit">Login</button>
 </form>
