--- a/templates/account/password_reset_email.html
+++ b/templates/account/password_reset_email.html
@@ -4,7 +4,8 @@
     {% trans "We've received a request to reset your password. If you didn't make this request, you can safely ignore this email. Otherwise, click the button below to reset your password." %}
 
     {% block reset_link %}
-        {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+        <!-- {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %} -->
+        {{ protocol }}://127.0.0.1:8000{% url 'password_reset_confirm' uidb64=uid token=token %}
     {% endblock %}
 
 {% endautoescape %}
