--- a/templates/articles/article_detail.html
+++ b/templates/articles/article_detail.html
@@ -34,7 +34,7 @@
         <button class = 'btn btn-dark scale-item' type ='submit'>Add a new comment</button>
     </form>
     {% else %}
-    <p> <a class = "btn btn-dark scale-item" href = "{% url 'login' %}">Log in</a> if you want to add a comment </p>
+    <p> <a class = "btn btn-dark scale-item" href = "{% url 'account_login' %}">Log in</a> if you want to add a comment </p>
     {% endif %}
     <p></p>
 </div>
