--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -16,7 +16,7 @@
     </form>
     {% else %}
         {% url 'account_email' as email_url %}
-        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please<a href="{{ email_url }}">issue a new e-mail confirmation request</a>.\
+        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid.
         {% endblocktrans %}</p>
     {% endif %}
 {% endblock %}
