--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -7,8 +7,7 @@
 
 {% block content %}
     <h1>Password change</h1>
-    <p>Please enter you old password, for security`s sake, and then enter you new password
-    twice so we can verify you typed it in correctly</p>
+    <p>Please enter you old password, for security`s sake, and then enter you new password twice so we can verify you typed it in correctly</p>
 
     <form method="post">
         {% csrf_token %}
